2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgetconf.8.xml: Document --list.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi.c: Don't remove '_' from "generic_changer".

2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h, common-src/conffile.c,
	  common-src/conffile.h, common-src/security-util.c,
	  configure.in, oldrecover-src/amrecover.c,
	  oldrecover-src/extract_list.c, recover-src/amrecover.c,
	  recover-src/extract_list.c, restore-src/amrestore.c,
	  server-src/dumper.c: Fix compiler error on Tru64.

2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (getconf_byname):
				Parse "DEFINE:identifer:parameter" format.
	* common-src/conffile.c (getconf_list): New function to list a DEFINE.
	* common-src/conffile.c (lookup_holdingdisk): New function.
	* common-src/conffile.h (getconf_list,
				 lookup_holdingdisk): New prototype.
	* server-src/getconf.c: accept --list argument and
				"DEFINE:identifer:parameter" format.
	* man/xml-source/amgetconf.8.xml: Document.

2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: set off_t variable to 0 before sscanf.
	* server-src/planner.c: set off_t variable to 0 before sscanf.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Improve error message.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix coverity bug 170.
	* server-src/diskfile.c: Fix coverity bug 147.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (validate_chunksize): Check chunksize is >=
						      2*DISK_BLOCK_KB

2006-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define OFF_T_STRTOL.
	* configure.in: Check for strtol and strtoll.

2006-11-02  Ian Turner <ian@zmanda.com>
	* common-src/amanda.h: Use atol if atoll is missing.
